--- a/client/alumnos/_inscripciones.html
+++ b/client/alumnos/_inscripciones.html
@@ -3,15 +3,15 @@
 		<section id="widget-pagos" data-widget-grid="data-widget-grid">
 		  <div class="row">
 		    <div class="col-sm-12">
-		      <div data-widget-color="blue" data-widget-colorbutton="false" data-widget-editbutton="false" data-widget-deletebutton="false" data-widget-fullscreenbutton="false" data-jarvis-widget="data-jarvis-widget" ng-repeat = "curso in al.inscripciones">
+		      <div data-widget-color="blue" data-widget-colorbutton="false" data-widget-editbutton="false" data-widget-deletebutton="false" data-widget-fullscreenbutton="false" data-jarvis-widget="data-jarvis-widget" data-widget-collapsed="{{curso.estatus == 1}}" ng-repeat = "curso in al.inscripciones">
 		        <header>
 		          <h2>Inscripción {{ $index + 1 }} - {{curso.grupo.nombre}} - {{curso.grupo.turno.nombre}}</h2>
 		        </header>
 		        <div>
 		          <div class="widget-body">
 			          <div>
-			            <inscripcionplanpagos></inscripcionplanpagos>
-									<modalabonar></modalabonar>
+			            <inscripcionplanpagos ng-if="al.tienePermiso(['coordinadorFinanciero', 'director', 'recepcionista'])"></inscripcionplanpagos>
+									<modalabonar ng-if="al.tienePermiso(['coordinadorFinanciero', 'director', 'recepcionista'])"></modalabonar>
 									<curricula></curricula>
 			          </div>						
 		          </div>
