--- a/client/coordinadores/coordinadores.html
+++ b/client/coordinadores/coordinadores.html
@@ -141,10 +141,10 @@
 							    <span class="caret"></span>
 							    <span class="sr-only">Toggle Dropdown</span>
 							  </button>
-							  <ul class="dropdown-menu text-left">
+							  <ul class="dropdown-menu dropdown-menu-right text-left">
 							    <li><a href="#" ng-click="c.editar(coordinador._id)"><i class="fa fa-pencil"></i> Editar</a></li>
 							    <li><a href="#" ng-click="c.cambiarEstatus(coordinador._id)">
-							    				<i class="fa fa-{{coordinador.estatus ? 'trash' : 'check' }}"></i> {{coordinador.estatus ? "Desactivar" : "Activar" }}
+							    				<i class="fa fa-{{coordinador.profile.estatus ? 'trash' : 'check' }}"></i> {{coordinador.profile.estatus ? "Desactivar" : "Activar" }}
 							    		</a>
 							    </li>
 							  </ul>
