--- a/client/gerentesVenta/gerentesVenta.html
+++ b/client/gerentesVenta/gerentesVenta.html
@@ -6,60 +6,143 @@
 			{{gv.nuevo == true ? 'Nuevo' : 'Cancelar'}}
 		</a>
 		<div class="collapse" id="collapseExample">
-			<form name="form" class="form-horizontal" role="form" novalidate >
-		  	<div class="well">
-			    <div class="row">
-			    	<div class="col-sm-4" valida>
-			    		<label>Nombre *</label>
-				    	<input name="nombre" type="text" class="form-control" placeholder="Nombre" ng-model="gv.gerenteVenta.profile.nombre" required>
-			    	</div>
-
-			    	<div class="col-sm-4" valida>
-			    		<label>Apellido Paterno *</label>
-				    	<input name="apellidoPaterno" type="text" class="form-control" placeholder="Apellido Paterno" ng-model="gv.gerenteVenta.profile.apPaterno" required>
-			    	</div>
-			    	<div class="col-sm-4">
-			    		<label>Apellido Materno</label>
-				    	<input type="text" class="form-control" placeholder="Apellido Materno" ng-model="gv.gerenteVenta.profile.apMaterno">
-			    	</div>
-			    </div>
-			    <div class="row">
-			    	<div class="col-sm-4">
-			    		<label>Dirección</label>
-				    	<input type="text" class="form-control" placeholder="Dirección" ng-model="gv.gerenteVenta.profile.direccion">
-			    	</div>
-			    	<div class="col-sm-4">
-			    		<label>Teléfono</label>
-				    	<input name="telefono" type="text" class="form-control" placeholder="Teléfono" ng-model="gv.gerenteVenta.profile.telefono">
-			    	</div>
-			    	<div class="col-sm-4">
-			    		<label>Correo</label>
-				    	<input name="correo" type="email" class="form-control" placeholder="Correo" ng-model="gv.gerenteVenta.profile.correo" >
-			    	</div>
-			    </div>
-			    <div class="row">
-			    	<div class="col-sm-4" valida>
-					    <label for="sexo">Sexo *</label>
-					    <select name="sexo" ng-model="gv.gerenteVenta.profile.sexo" data-placeholder="Seleccione" class="form-control" required>
-							    <option value=""></option>
-							    <option value="masculino">Masculino</option>
-							    <option value="femenino">Femenino</option>
-							</select>
-			    	</div>
-			    	<div class="col-sm-4">
-							<label for="talla">Fotografía</label>
-							<button class="btn btn-primary" ng-click="gv.tomarFoto()"><i class="fa fa-camera"></i></button>
-							<img width="100px" ng-src="{{gv.gerenteVenta.profile.fotografia}}" ng-class="{'img-thumbnail': !gv.gerenteVenta.profile.fotografia}" />
+			<div class="row">
+				<div class="col-sm-7">
+					<form name="form" class="form-horizontal" role="form" novalidate >
+				  	<div class="well">
+					    <div class="row">
+						    <h2>Datos Personales</h2>
+					    	<div class="col-sm-4" valida>
+					    		<label>Nombre *</label>
+						    	<input name="nombre" type="text" class="form-control" placeholder="Nombre" ng-model="gv.gerenteVenta.profile.nombre" required>
+					    	</div>
+		
+					    	<div class="col-sm-4" valida>
+					    		<label>Apellido Paterno *</label>
+						    	<input name="apellidoPaterno" type="text" class="form-control" placeholder="Apellido Paterno" ng-model="gv.gerenteVenta.profile.apPaterno" required>
+					    	</div>
+					    	<div class="col-sm-4">
+					    		<label>Apellido Materno</label>
+						    	<input type="text" class="form-control" placeholder="Apellido Materno" ng-model="gv.gerenteVenta.profile.apMaterno">
+					    	</div>
+					    </div>
+					    <div class="row">
+					    	<div class="col-sm-4">
+					    		<label>Dirección</label>
+						    	<input type="text" class="form-control" placeholder="Dirección" ng-model="gv.gerenteVenta.profile.direccion">
+					    	</div>
+					    	<div class="col-sm-4">
+					    		<label>Teléfono</label>
+						    	<input name="telefono" type="text" class="form-control" placeholder="Teléfono" ng-model="gv.gerenteVenta.profile.telefono">
+					    	</div>
+					    	<div class="col-sm-4">
+					    		<label>Correo</label>
+						    	<input name="correo" type="email" class="form-control" placeholder="Correo" ng-model="gv.gerenteVenta.profile.correo" >
+					    	</div>
+					    </div>
+					    <div class="row">
+					    	<div class="col-sm-4" valida>
+							    <label for="sexo">Sexo *</label>
+							    <select name="sexo" ng-model="gv.gerenteVenta.profile.sexo" data-placeholder="Seleccione" class="form-control" required>
+									    <option value=""></option>
+									    <option value="masculino">Masculino</option>
+									    <option value="femenino">Femenino</option>
+									</select>
+					    	</div>
+					    	<div class="col-sm-4">
+									<label for="talla">Fotografía</label>
+									<button class="btn btn-primary" ng-click="gv.tomarFoto()"><i class="fa fa-camera"></i></button>
+									<img width="100px" ng-src="{{gv.gerenteVenta.profile.fotografia}}" ng-class="{'img-thumbnail': !gv.gerenteVenta.profile.fotografia}" />
+								</div>
+					    </div>
 						</div>
-			    </div>
+						<div class="row">
+							<div class="col-sm-12">
+								<input type="submit" ng-click="gv.guardar(gv.gerenteVenta,form)" value="Guardar" class="btn btn-primary" ng-show="gv.action" valida-form formulario="form"/>
+								<input type="submit" ng-click="gv.actualizar(gv.gerenteVenta,form)" value="Actualizar" class="btn btn-primary" ng-show="!gv.action" valida-form formulario="form"/>				
+							</div>
+						</div>	  
+				  </form>
 				</div>
-				<div class="row">
-					<div class="col-sm-12">
-						<input type="submit" ng-click="gv.guardar(gv.gerenteVenta,form)" value="Guardar" class="btn btn-primary" ng-show="gv.action" valida-form formulario="form"/>
-						<input type="submit" ng-click="gv.actualizar(gv.gerenteVenta,form)" value="Actualizar" class="btn btn-primary" ng-show="!gv.action" valida-form formulario="form"/>				
-					</div>
-				</div>	  
-		  </form>
+				<div class="col-sm-5">
+					<form name="formComisiones" class="form-horizontal" role="form" novalidate>
+						<div class="well">
+						  <div class="row">
+						    <h2>Plan de comisiones</h2>
+						    <div class="col-sm-4">
+						    	<label>Cant. Inicial *</label>
+							    <input name="cantIncial" type="number" class="form-control" ng-model="gv.comision.cantInicial" required=""/>
+					    	</div>
+					    	<div class="col-sm-2">
+					    		<label>Signo *</label>
+					    		<select name="signoInicial" class="form-control" ng-model="gv.comision.signo" required>
+						    		<option value=">">Mayor</option>
+						    		<option value=">=">Mayor igual</option>
+						    		<option value="<">Menor</option>
+						    		<option value="<=">Menor igual</option>
+					    		</select>
+					    	</div>
+					    	<div class="col-sm-4">
+						    	<label>Cant. Final *</label>
+							    <input name="cantFinal" type="number" class="form-control" ng-model="gv.comision.cantFinal" required=""/>
+					    	</div>
+					    	<div class="col-sm-2" valida>
+						    	<label>Importe *</label>
+							    <input name="importe" type="number" class="form-control" ng-model="gv.comision.importe" required=""/>
+					    	</div>
+					    </div>
+					    <br/>
+					    <div class="row">
+						    <div class="col-sm-12">
+							    <input type="button" ng-click="gv.agregarComision(gv.comision,formComisiones)" value="Agregar" class="btn btn-primary pull-right" valida-form formulario="formComisiones"/>
+						    </div>
+					    </div>
+					    <br/>
+					    <div class="row">
+						    <table class="table table-bordered">
+									<thead>
+										<tr>
+											<th width="5%"><div class="text-center">No.</div></th>
+											<th width="50%"><div class="text-center">Nombre</div></th>
+											<th width="10%"><div class="text-center">Importe </div></th>
+											<th width="10%">
+												<div class="text-center">
+													Acciones
+												</div>
+											</th>
+										</tr>
+									</thead>
+									<tbody>
+								    <tr ng-repeat="comision in gv.gerenteVenta.profile.planComision">
+									    <td class="text-center">{{$index + 1}}</td>
+									    <td class="text-center">
+										    {{comision.cantInicial}} {{comision.signo}} {{comision.cantFinal}}
+										    <input type="number" class="form-control" ng-model="comision.cantInicial" ng-show="comision.editando">
+										    <select class="form-control" ng-model="comision.signo" ng-show="comision.editando">
+									    		<option value=">">Mayor</option>
+									    		<option value=">=">Mayor igual</option>
+									    		<option value="<">Menor</option>
+									    		<option value="<=">Menor igual</option>
+								    		</select>
+										    <input type="number" class="form-control" ng-model="comision.cantFinal" ng-show="comision.editando">
+										  </td>
+									    <td class="text-right">
+										    {{comision.importe | currency}} 
+										    <input type="number" class="form-control" ng-model="comision.importe" ng-show="comision.editando">
+										  </td>
+									    <td class="text-center">
+										    <button class="btn btn-primary btn-xs" ng-click="gv.confirmarComision(comision)" ng-show="comision.editando == true;"><i class="fa fa-check"></i></button>
+										    <button class="btn btn-warning btn-xs" ng-click="gv.editarComision(comision)" ng-show="comision.editando == false || comision.editando == undefined"><i class="fa fa-pencil"></i></button>
+										    <button class="btn btn-danger btn-xs" ng-click="gv.quitarComision(comision, $index)"><i class="fa fa-trash"></i></button>
+									    </td>
+								    </tr>
+									</tbody>
+								</table>
+					    </div>
+						</div>
+				  </form>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
@@ -113,10 +196,10 @@
 							    <span class="caret"></span>
 							    <span class="sr-only">Toggle Dropdown</span>
 							  </button>
-							  <ul class="dropdown-menu text-left">
+							  <ul class="dropdown-menu dropdown-menu-right text-left">
 							    <li><a href="#" ng-click="gv.editar(gerenteVenta._id)"><i class="fa fa-pencil"></i> Editar</a></li>
 							    <li><a href="#" ng-click="gv.cambiarEstatus(gerenteVenta._id)">
-							    				<i class="fa fa-{{gerenteVenta.estatus ? 'trash' : 'check' }}"></i> {{gerenteVenta.estatus ? "Desactivar" : "Activar" }}
+							    				<i class="fa fa-{{gerenteVenta.profile.estatus ? 'trash' : 'check' }}"></i> {{gerenteVenta.profile.estatus ? "Desactivar" : "Activar" }}
 							    		</a>
 							    </li>
 							  </ul>
