--- a/client/grupos/grupos.ng.html
+++ b/client/grupos/grupos.ng.html
@@ -22,10 +22,10 @@
 		<table class="table table-bordered table-responsive" style="table-layout:fixed;">
 			<thead>
 				<tr>
-					<th width="5%"><div class="text-center">No.</div></th>
+					<th width="2%"><div class="text-center">No.</div></th>
 					<th width="10%" class="hidden-xs visible-lg"><div class="text-center">Ciclo</div></th>
-					<th width="5%"><div class="text-center">Grupo</div></th>
-					<th width="10%"><div class="text-center">Alums.</div></th>
+					<th width="10%"><div class="text-center">Grupo</div></th>
+					<th width="5%"><div class="text-center">Alums.</div></th>
 					<th width="10%" class="hidden-xs visible-lg"><div class="text-center">Cupo</div></th>
 					<th width="10%" class="hidden-xs visible-lg"><div class="text-center">Turno</div></th>
 					<th width="30%"><div class="text-center">Asignaciones</div></th>
@@ -46,7 +46,7 @@
 					<td>{{$index + 1}}</td>
 			    <td class="text-center hidden-xs visible-lg">{{gp.getCiclo(grupo.ciclo_id)}}</td>
 			    <td class="text-center"><a ui-sref="root.grupoDetalle({grupo_id : grupo._id})">{{grupo.identificador}}</a></td>
-			    <td class="text-center"><strong>{{grupo.alumnos.length}} / {{grupo.cupo}}</strong></td>
+			    <td class="text-center"><strong>{{grupo.alumnos.length}}/{{grupo.cupo}}</strong></td>
 			    <td class="text-center hidden-xs visible-lg">
 				    <div class="progress right">
 							<div class="progress-bar bg-color-blue" aria-valuetransitiongoal="75" aria-valuenow="75" style="width: {{grupo.alumnos.length/grupo.cupo*100}}%;">
@@ -100,7 +100,7 @@
 							    <span class="caret"></span>
 							    <span class="sr-only">Toggle Dropdown</span>
 							  </button>
-							  <ul class="dropdown-menu text-left">
+							  <ul class="dropdown-menu dropdown-menu-right text-left">
 							    <li><a href="./grupo/{{grupo._id}}"><i class="fa fa-pencil"></i> Editar</a></li>
 							    <li><a href="#" ng-click="gp.cambiarEstatus(grupo._id)"><i class="fa fa-trash"></i> {{gp.getEstatus(grupo.estatus)}}</a></li>
 							  </ul>
