--- a/client/home/_admin.html
+++ b/client/home/_admin.html
@@ -11,23 +11,23 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-3">
-								<a ui-sref="root.campus" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-building"></i></span>Campus</a>
+								<a ui-sref="root.campus" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-building"></i></span>Campus</a>
 							</div>
 							<div class="col-sm-3">
-								<a ui-sref="root.avisos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-exclamation-triangle"></i></span>Avisos</a>
+								<a ui-sref="root.avisos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-exclamation-triangle"></i></span>Avisos</a>
 							</div>
 						  <div class="col-sm-3">
-								<a ui-sref="root.conceptosGasto" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Conceptos Gasto</a>
+								<a ui-sref="root.conceptosGasto" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Conceptos Gasto</a>
 						  </div>
 						  <div class="col-sm-3">
-								<a ui-sref="root.conceptos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Conceptos</a>
+								<a ui-sref="root.conceptos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Conceptos</a>
 						  </div>
 						</div>
 						<br/>
 						<div class="row">
 						  
 						  <div class="col-sm-3">
-								<a ui-sref="root.mediosPublicidad" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa fa-medium"></i></span>Medios de Publicidad</a>
+								<a ui-sref="root.mediosPublicidad" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa fa-medium"></i></span>Medios de Publicidad</a>
 						  </div>
 						</div>
           </div>
@@ -45,13 +45,13 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-3">
-								<a ui-sref="root.bitacora" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-tag"></i></span>Bitácora</a>
+								<a ui-sref="root.bitacora" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-tag"></i></span>Bitácora</a>
 						  </div>
 						  <div class="col-sm-6">
-								<a ui-sref="root.cambiarRangoPlanPagos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Cambiar Rango del Plan de Pagos</a>
+								<a ui-sref="root.cambiarRangoPlanPagos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Cambiar Rango del Plan de Pagos</a>
 						  </div>
 						  <div class="col-sm-3">
-								<a ui-sref="root.notas" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-pencil"></i></span>Notas</a>
+								<a ui-sref="root.notas" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-pencil"></i></span>Notas</a>
 						  </div>
 						</div>
         </div>
