--- a/client/home/_coordinadorAcademico.html
+++ b/client/home/_coordinadorAcademico.html
@@ -10,41 +10,41 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-4">
-								<a ui-sref="root.planEstudio" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa fa-object-group"></i></span>Plan de Estudio</a>
+								<a ui-sref="root.planEstudio" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa fa-object-group"></i></span>Plan de Estudio</a>
 							</div>
 							<div class="col-sm-4">
-								<a ui-sref="root.aulas" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-home"></i></span>Aulas</a>
+								<a ui-sref="root.aulas" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-home"></i></span>Aulas</a>
 							</div>
 							<div class="col-sm-4">
-								<a ui-sref="root.deptosAcademicos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-cubes"></i></span>Deptos. Académicos</a>
-							</div>
-						</div>
-						<br/>
-						<div class="row">
-							<div class="col-sm-4">
-								<a ui-sref="root.rvoe" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-file-o"></i></span>Rvoe</a>
-							</div>
-							<div class="col-sm-4">
-								<a ui-sref="root.grupos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Grupos</a>
-							</div>
-							<div class="col-sm-4">
-								<a ui-sref="root.materias" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-map-o"></i></span>Materias</a>
+								<a ui-sref="root.deptosAcademicos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-cubes"></i></span>Deptos. Académicos</a>
 							</div>
 						</div>
 						<br/>
 						<div class="row">
 							<div class="col-sm-4">
-								<a ui-sref="root.turnos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-spinner"></i></span>Turnos</a>
+								<a ui-sref="root.rvoe" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-file-o"></i></span>Rvoe</a>
+							</div>
+							<div class="col-sm-4">
+								<a ui-sref="root.grupos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Grupos</a>
+							</div>
+							<div class="col-sm-4">
+								<a ui-sref="root.materias" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-map-o"></i></span>Materias</a>
+							</div>
+						</div>
+						<br/>
+						<div class="row">
+							<div class="col-sm-4">
+								<a ui-sref="root.turnos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-spinner"></i></span>Turnos</a>
  							</div>
 							<div class="col-sm-4">
-								<a ui-sref="root.generaciones" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Generaciones</a>
+								<a ui-sref="root.generaciones" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Generaciones</a>
 							</div>
 							<div class="col-sm-4">
-								<a ui-sref="root.calendarios" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-calendar"></i></span>Calendarios</a>
+								<a ui-sref="root.calendarios" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-calendar"></i></span>Calendarios</a>
 							</div>
 <!--
 							<div class="col-sm-4">
-								<a ui-sref="root.inscripciones" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-pencil"></i></span>Inscripciones</a>
+								<a ui-sref="root.inscripciones" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-pencil"></i></span>Inscripciones</a>
 							</div>
 -->
 						</div>
@@ -64,25 +64,25 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-4">
-								<a ui-sref="root.gruposActivos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-group"></i></span>Grupos Activos</a>
+								<a ui-sref="root.gruposActivos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-group"></i></span>Grupos Activos</a>
 							</div>
 							<div class="col-sm-4">
-								<a ui-sref="root.resumenAcademico" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-align-center"></i></span>Resumen</a>
+								<a ui-sref="root.resumenAcademico" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-align-center"></i></span>Resumen</a>
 							</div>			
 							<div class="col-sm-4">
-								<a ui-sref="root.panelPlaneaciones" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-columns"></i></span>Panel Planeaciones</a>
+								<a ui-sref="root.panelPlaneaciones" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-columns"></i></span>Panel Planeaciones</a>
 							</div>
 						</div>
 						<br/>
 						<div class="row">
 							<div class="col-sm-4">
-								<a ui-sref="root.maestros" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Maestros</a>
+								<a ui-sref="root.maestros" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Maestros</a>
 							</div>
 							<div class="col-sm-4">
-								<a ui-sref="root.mensajes" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-commenting-o"></i></span>Mensajes</a>
+								<a ui-sref="root.mensajes" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-commenting-o"></i></span>Mensajes</a>
 							</div>
 							<div class="col-sm-4">
-								<a ui-sref="root.categoriasForos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-comments"></i></span>Categorías en Foros</a>
+								<a ui-sref="root.categoriasForos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-comments"></i></span>Categorías en Foros</a>
 							</div>
 						</div>
           </div>
