--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,8 @@
 <head>
   <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta charset="utf-8">
 </head>
-<body class="menu-on-top smart-style-6" ng-app="casserole">
+<body class="" ng-app="casserole">
   <ui-view></ui-view>
 </body>
