--- a/client/inscripciones/form.ng.html
+++ b/client/inscripciones/form.ng.html
@@ -22,7 +22,8 @@
 		<div class="jarviswidget jarviswidget-sortable" id="wid-id-0" role="widget">
 			<header role="heading">
 				<span class="widget-icon"> <i class="fa fa-check"></i> </span>
-				<h2>Proceso de Inscripción </h2>
+				<h2 ng-show="ins.prospectoSeleccionado == undefined">Proceso de Inscripción</h2>
+				<h2 ng-show="ins.prospectoSeleccionado != undefined">Se está inscribiendo a: <strong>{{ins.prospectoSeleccionado.profile.nombreCompleto}}</strong></h2>
 				<div class="widget-toolbar hidden-mobile" role="menu">
 					<span class="onoffswitch-title"><i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;&nbsp; Carga inicial</span>
 					<span class="onoffswitch">
@@ -424,6 +425,12 @@
 															  </p>
 														  </div>															  
 														</div>
+														<div class="col-sm-4">
+															<label class="text-center">Turno</label>
+														  	<p>
+															  	{{ins.grupoSeleccionado.turno.nombre}} {{ins.grupoSeleccionado.turno.horaInicio}}-{{ins.grupoSeleccionado.turno.horaInicio != undefined ? ins.grupoSeleccionado.turno.horaFin : ""}}
+															  </p>
+														</div>
 											  	</div>
 										  	</div>	
 											</div>
@@ -482,6 +489,7 @@
 																	<p ng-repeat="concepto in ins.inscripcion.planPagos.colegiatura.Semanal.conceptos">{{concepto.importe | currency}} </p>
 																</td>
 															</tr>
+<!--
 															<tr>
 																<td>
 																	<input type="radio" name="rbColegiatura" ng-model="ins.inscripcion.planPagos.colegiatura.tipoColegiatura"  value="Quincenal"  ng-change='ins.cambioTipoColegiatura("Quincenal")'>
@@ -492,6 +500,7 @@
 																	<p ng-repeat="concepto in ins.inscripcion.planPagos.colegiatura.Quincenal.conceptos">{{concepto.importe | currency}} </p>
 																</td>
 															</tr>
+-->
 															<tr>
 																<td>
 																	<input type="radio" name="rbColegiatura" ng-model="ins.inscripcion.planPagos.colegiatura.tipoColegiatura"  value="Mensual"  ng-change='ins.cambioTipoColegiatura("Mensual")'>
