--- a/client/login/login.ng.html
+++ b/client/login/login.ng.html
@@ -1,11 +1,9 @@
-<header id="header" style="height: 80px;">
-	<div id="logo-group" style="float: right !important">
-		<span id="logo"> <img src="/img/logoIcep.png" alt="Escuelas"> </span>
-	</div>
+<header id="header" style="height: 150px;">
 	<div id="logo-group">
-		<span id="logo"> <img src="/img/logoCasserole.png" alt="Escuelas"> </span>
+		<span id="logo"> <img src="/img/logoHermannHesse.jpg" alt="Escuelas"> </span>
 	</div>
 </header>
+<br/>
 <div class="row">
 	<div class="col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 col-lg-4 col-lg-offset-4">
 		<div class="well no-padding">
