--- a/client/secciones/secciones.ng.html
+++ b/client/secciones/secciones.ng.html
@@ -109,13 +109,8 @@
 								    	<input name="logo" type="text" class="form-control" placeholder="http://" ng-model="sec.seccion.logo" required>
 								    </div>
 								    <div class="col-sm-3">
-									    <button ng-click="sec.seleccionarLogo('/img/logoCasserole.png')" class="btn btn-lg">
-												<img src="/img/logoCasserole.png" class="thumbnail" style="height: 60px !important"/>
-									    </button>
-								    </div>
-								    <div class="col-sm-3">
-									    <button ng-click="sec.seleccionarLogo('/img/logoIcep.png')" class="btn btn-lg">
-												<img src="/img/logoIcep.png" class="thumbnail" style="height: 60px !important"/>
+									    <button ng-click="sec.seleccionarLogo('/img/logoHermannHesse.jpg')" class="btn btn-lg">
+												<img src="/img/logoHermannHesse.jpg" class="thumbnail" style="height: 60px !important"/>
 									    </button>
 								    </div>
 							    </div>
