--- a/client/vendedores/vendedores.html
+++ b/client/vendedores/vendedores.html
@@ -143,10 +143,10 @@
 							    <span class="caret"></span>
 							    <span class="sr-only">Toggle Dropdown</span>
 							  </button>
-							  <ul class="dropdown-menu text-left">
+							  <ul class="dropdown-menu dropdown-menu-right text-left">
 							    <li><a href="#" ng-click="v.editar(vendedor._id)"><i class="fa fa-pencil"></i> Editar</a></li>
 							    <li><a href="#" ng-click="v.cambiarEstatus(vendedor._id)">
-							    				<i class="fa fa-{{vendedor.estatus ? 'trash' : 'check' }}"></i> {{vendedor.estatus ? "Desactivar" : "Activar" }}
+							    				<i class="fa fa-{{vendedor.profile.estatus ? 'trash' : 'check' }}"></i> {{vendedor.profile.estatus ? "Desactivar" : "Activar" }}
 							    		</a>
 							    </li>
 							  </ul>
