--- a/client/home/_alumno.html
+++ b/client/home/_alumno.html
@@ -10,7 +10,7 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-3">
-								<a ui-sref="root.alumnoGrupos({alumno_id : currentUser._id})" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Mis Grupos</a>
+								<a ui-sref="root.alumnoGrupos({alumno_id : currentUser._id})" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Mis Grupos</a>
 							</div>												
 						</div>
           </div>
