--- a/client/home/_coordinadorFinanciero.html
+++ b/client/home/_coordinadorFinanciero.html
@@ -10,31 +10,31 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-3">
-								<a ui-sref="root.inscripciones" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-pencil"></i></span>Inscripciones</a>
+								<a ui-sref="root.inscripciones" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-pencil"></i></span>Inscripciones</a>
 							</div>
 							<div class="col-sm-3">
-									<a ui-sref="root.gastos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-usd"></i></span>Gastos</a>
+									<a ui-sref="root.gastos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-usd"></i></span>Gastos</a>
 								</div>
 							<div class="col-sm-3">
-								<a ui-sref="root.conceptosComision" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Conceptos de Comisión</a>
+								<a ui-sref="root.conceptosComision" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Conceptos de Comisión</a>
 							</div>
 							<div class="col-sm-3">
-									<a ui-sref="root.cuentas" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-credit-card"></i></span>Cuentas</a>
+									<a ui-sref="root.cuentas" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-credit-card"></i></span>Cuentas</a>
 								</div>
 						</div>
 						<br/>
 						<div class="row">
 							<div class="col-sm-3">
-								<a ui-sref="root.deudores" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Deudores</a>
+								<a ui-sref="root.deudores" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Deudores</a>
 							</div>
 							<div class="col-sm-3">
-								<a ui-sref="root.cobranza" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Cobranza</a>
+								<a ui-sref="root.cobranza" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Cobranza</a>
 							</div>
 							<div class="col-sm-3">
-								<a ui-sref="root.conceptosPago" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Conceptos Pago</a>
+								<a ui-sref="root.conceptosPago" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Conceptos Pago</a>
 						  </div>
 						  <div class="col-sm-3">
-								<a ui-sref="root.otrosCobros" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Otros Cobros</a>
+								<a ui-sref="root.otrosCobros" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Otros Cobros</a>
 							</div>
 						</div>
           </div>
