--- a/client/home/_gerenteVenta.html
+++ b/client/home/_gerenteVenta.html
@@ -10,17 +10,17 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-3">
-								<a ui-sref="root.etapasVenta" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> 
+								<a ui-sref="root.etapasVenta" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> 
 									<span class="btn-label"><i class="fa fa-lg fa-fw fa-tag"></i></span>Etapas de Venta
 								</a>
 							</div>	
 							<div class="col-sm-3">
-								<a ui-sref="root.gerenteVendedores" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> 
+								<a ui-sref="root.gerenteVendedores" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> 
 									<span class="btn-label"><i class="fa fa-lg fa-fw fa-align-center"></i></span>Resumen Vendedores
 								</a>
 							</div>
 							<div class="col-sm-6">
-								<a ui-sref="root.prospectosPorMedioPublicidad" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> 
+								<a ui-sref="root.prospectosPorMedioPublicidad" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> 
 									<span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Prospectos por Medio de Publicidad
 								</a>
 							</div>
