--- a/client/home/_maestro.html
+++ b/client/home/_maestro.html
@@ -10,10 +10,10 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-3">
-								<a ui-sref="root.gruposMaestro" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Mis Grupos</a>
+								<a ui-sref="root.gruposMaestro" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Mis Grupos</a>
 							</div>		
 							<div class="col-sm-3">
-								<a ui-sref="root.mensajes" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-commenting-o"></i></span>Mis Mensajes</a>
+								<a ui-sref="root.mensajes" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-commenting-o"></i></span>Mis Mensajes</a>
 							</div>						
 						</div>
           </div>
