--- a/client/home/_recepcionista.html
+++ b/client/home/_recepcionista.html
@@ -10,10 +10,10 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-3">
-								<a ui-sref="root.alumnos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Alumnos</a>
+								<a ui-sref="root.alumnos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Alumnos</a>
 							</div>
 							<div class="col-sm-3">
-								<a ui-sref="root.inscripciones" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-pencil"></i></span>Inscripciones</a>
+								<a ui-sref="root.inscripciones" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-pencil"></i></span>Inscripciones</a>
 							</div>
 						</div>
           </div>
@@ -31,7 +31,7 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-3">
-								<a ui-sref="root.gruposActivos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Grupos Activos</a>
+								<a ui-sref="root.gruposActivos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Grupos Activos</a>
 							</div>
 						</div>
           </div>
@@ -49,13 +49,13 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-3">
-								<a ui-sref="root.deudores" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Deudores</a>
+								<a ui-sref="root.deudores" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Deudores</a>
 							</div>
 							<div class="col-sm-3">
-								<a ui-sref="root.deudoresGrupo" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Deudores por Grupos</a>
+								<a ui-sref="root.deudoresGrupo" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Deudores por Grupos</a>
 							</div>
 						  <div class="col-sm-3">
-								<a ui-sref="root.cobranza" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Cobranza</a>
+								<a ui-sref="root.cobranza" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-dollar"></i></span>Cobranza</a>
 							</div>
 						</div>
           </div>
