--- a/client/home/_vendedor.html
+++ b/client/home/_vendedor.html
@@ -10,10 +10,10 @@
           <div class="widget-body">
 						<div class="row">
 							<div class="col-sm-3">
-								<a ui-sref="root.prospectos" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Prospectos</a>
+								<a ui-sref="root.prospectos" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-users"></i></span>Prospectos</a>
 							</div>
 							<div class="col-sm-3">
-								<a ui-sref="root.actividades" href="javascript:void(0);" class="btn btn-labeled btn-warning btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Actividades</a>
+								<a ui-sref="root.actividades" href="javascript:void(0);" class="btn btn-labeled btn-primary btn-block" style="text-align: left"> <span class="btn-label"><i class="fa fa-lg fa-fw fa-list"></i></span>Actividades</a>
 							</div>	
 						</div>
           </div>
